--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
   * <link rel="manifest" href="site.webmanifest">
   -->
 
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Mada:wght@400;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="assets/css/main.css">
 
   <meta name="theme-color" content="#03090C">
