marks up tools page

--- a/index.html
+++ b/index.html
@@ -22,7 +22,92 @@
 </head>
 
 <body>
-  <h1>Hi</h1>
+  <div class="nav">
+    <nav class="nav-inner" role="navigation">
+      <a class="nav-logo" href="">
+        <img src="assets/logo-horizontal.png" srcset="assets/logo-horizontal.png 1x, assets/logo-horizontal@2x.png 2x" alt="Mudavar, home" draggable="false">
+      </a>
+
+      <ul class="nav-list">
+        <li class="nav-item">
+          <a class="nav-link is-active" href="">
+            Tools
+          </a>
+        </li>
+      </ul>
+    </nav>
+  </div>
+
+  <main class="main" id="#main">
+    <header class="hero" role="banner">
+      <div class="hero-wrapper wrapper">
+        <h1 class="hero-headline">Tools</h1>
+      </div>
+      <img class="hero-img" src="assets/hero/tools-hero.png" srcset="assets/hero/tools-hero.png 1x, assets/hero/tools-hero@2x.png 2x" alt="" draggable="false">
+    </header>
+
+    <div class="wrapper">
+      <div class="tools-list">
+
+        <section class="tools-section">
+          <h2 class="tools-heading">Data science</h2>
+          <ul class="tools-list">
+            <li class="tools-item">
+              <a class="tile darkglass-tile" href="">
+                <img class="tile-img" src="assets/icons/tools/jupyterhub-logo.png" srcset="assets/icons/tools/jupyterhub-logo.svg" alt="Jupyter Hub" draggable="false">
+              </a>
+            </li>
+          </ul>
+        </section>
+
+        <section class="tools-section">
+          <h2 class="tools-heading">Data analysis</h2>
+          <ul class="tools-list">
+            <li class="tools-item">
+              <a class="tile darkglass-tile" href="">
+                <img class="tile-img" src="assets/icons/tools/business-intelligence-icon.png" srcset="assets/icons/tools/business-intelligence-icon.svg" alt="" draggable="false">
+                <span class="tile-title">Business intelligence view</span>
+              </a>
+            </li>
+
+            <li class="tools-item">
+              <a class="tile darkglass-tile" href="">
+                <img class="tile-img" src="assets/icons/tools/graph-view-icon.png" srcset="assets/icons/tools/graph-view-icon.svg" alt="" draggable="false">
+                <span class="tile-title">Graph view</span>
+              </a>
+            </li>
+          </ul>
+        </section>
+
+        <section class="tools-section">
+          <h2 class="tools-heading">Browse & manage <span class="u-visually-hidden">data</span></h2>
+          <ul class="tools-list">
+            <li class="tools-item">
+              <a class="tile darkglass-tile" href="">
+                <img class="tile-img" src="assets/icons/tools/data-viewer-icon.png" srcset="assets/icons/tools/data-viewer-icon.svg" alt="" draggable="false">
+                <span class="tile-title">Data viewer</span>
+              </a>
+            </li>
+
+            <li class="tools-item">
+              <a class="tile darkglass-tile" href="">
+                <img class="tile-img" src="assets/icons/tools/prediction-engines-icon.png" srcset="assets/icons/tools/prediction-engines-icon.svg" alt="" draggable="false">
+                <span class="tile-title">Engines</span>
+              </a>
+            </li>
+          </ul>
+        </section>
+
+      </div>
+    </div>
+  </main>
+
+  <!-- <footer></footer> -->
+
+  <div class="bg">
+    <img class="bg-img" src="assets/bg.jpg" srcset="assets/bg.jpg 1x, assets/bg@2x.jpg 2x" alt="" draggable="false">
+  </div>
+
 </body>
 
 </html>
