styles darkglass tile, wraps & centers content

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
 <body>
   <div class="nav">
-    <nav class="nav-inner" role="navigation">
+    <nav class="nav-inner wrapper" role="navigation">
       <a class="nav-logo" href="">
         <img src="assets/logo-horizontal.png" srcset="assets/logo-horizontal.png 1x, assets/logo-horizontal@2x.png 2x" alt="Mudavar, home" draggable="false">
       </a>
@@ -53,7 +53,7 @@
           <h2 class="tools-heading">Data science</h2>
           <ul class="tools-list">
             <li class="tools-item">
-              <a class="tile darkglass-tile" href="">
+              <a class="tile darkglass" href="">
                 <img class="tile-img" src="assets/icons/tools/jupyterhub-logo.png" srcset="assets/icons/tools/jupyterhub-logo.svg" alt="Jupyter Hub" draggable="false">
               </a>
             </li>
@@ -64,14 +64,14 @@
           <h2 class="tools-heading">Data analysis</h2>
           <ul class="tools-list">
             <li class="tools-item">
-              <a class="tile darkglass-tile" href="">
+              <a class="tile darkglass" href="">
                 <img class="tile-img" src="assets/icons/tools/business-intelligence-icon.png" srcset="assets/icons/tools/business-intelligence-icon.svg" alt="" draggable="false">
                 <span class="tile-title">Business intelligence view</span>
               </a>
             </li>
 
             <li class="tools-item">
-              <a class="tile darkglass-tile" href="">
+              <a class="tile darkglass" href="">
                 <img class="tile-img" src="assets/icons/tools/graph-view-icon.png" srcset="assets/icons/tools/graph-view-icon.svg" alt="" draggable="false">
                 <span class="tile-title">Graph view</span>
               </a>
@@ -83,14 +83,14 @@
           <h2 class="tools-heading">Browse & manage <span class="u-visually-hidden">data</span></h2>
           <ul class="tools-list">
             <li class="tools-item">
-              <a class="tile darkglass-tile" href="">
+              <a class="tile darkglass" href="">
                 <img class="tile-img" src="assets/icons/tools/data-viewer-icon.png" srcset="assets/icons/tools/data-viewer-icon.svg" alt="" draggable="false">
                 <span class="tile-title">Data viewer</span>
               </a>
             </li>
 
             <li class="tools-item">
-              <a class="tile darkglass-tile" href="">
+              <a class="tile darkglass" href="">
                 <img class="tile-img" src="assets/icons/tools/prediction-engines-icon.png" srcset="assets/icons/tools/prediction-engines-icon.svg" alt="" draggable="false">
                 <span class="tile-title">Engines</span>
               </a>
