styles nav link

--- a/index.html
+++ b/index.html
@@ -29,8 +29,13 @@
       </a>
 
       <ul class="nav-list">
+        <!-- <li class="nav-item">
+          <a class="nav-link u-font-xs" href="">
+            Asset viewer
+          </a>
+        </li> -->
         <li class="nav-item">
-          <a class="nav-link is-active" href="">
+          <a class="nav-link u-font-xs" aria-current="page" href="">
             Tools
           </a>
         </li>
