--- a/index.html
+++ b/index.html
@@ -7,18 +7,15 @@
   <!-- <meta name="description" content=""> -->
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <!-- 
-  * TODO: favicon
-  * https://evilmartians.com/chronicles/how-to-favicon-in-2021-six-files-that-fit-most-needs?ref=sidebar
-  * <link rel="apple-touch-icon" href="icon.png">
-  * <link rel="manifest" href="site.webmanifest">
-  -->
+  <link rel="icon" href="/favicon.ico">
+  <link rel="apple-touch-icon" href="assets/favicon/180.png">
+  <link rel="manifest" href="site.webmanifest">
+  <meta name="theme-color" content="#03090C">
 
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Amiri:wght@700&Mada:wght@400;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="assets/css/main.css">
 
-  <meta name="theme-color" content="#03090C">
 </head>
 
 <body>
